--- a/examples/index.html
+++ b/examples/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <script type="module" src="../src/example.ts"></script>
+    <script type="module" src="example.ts"></script>
 </body>
 
 </html>
