--- a/packages/Interaction/examples/index.html
+++ b/packages/Interaction/examples/index.html
@@ -1,35 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>InstancedMesh2 example</title>
-  <style>
-    html,
-    body {
-      height: 100%;
-      margin: 0;
-      overflow: hidden;
-      overscroll-behavior: none;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>three.ez example</title>
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        overflow: hidden;
+        overscroll-behavior: none;
+      }
 
-    canvas {
-      width: 100%;
-      height: 100%;
-      display: block;
-      touch-action: none;
-      user-select: none;
-    }
+      canvas {
+        width: 100%;
+        height: 100%;
+        display: block;
+        touch-action: none;
+        user-select: none;
+      }
 
-    .info {
-      position: fixed;
-      top: 40px;
-      right: 40px;
-    }
-  </style>
-</head>
-<body>
-  <script type="module" src="./main.ts"></script>
-  <span class="info" id="count"></span>
-</body>
+      .blink {
+        padding: 5px 5px;
+        color: #fff;
+        border: 1px solid #fff;
+        border-radius: 20px;
+        transition: 0.2s;
+      }
+
+      .blink.active-sphere {
+        background: #6666ff;
+      }
+
+      .blink.active-box {
+        background: #ff6666;
+      }
+
+      .blink.active-plane {
+        background: #66ff66;
+        color: #000;
+      }
+
+      .blink.active-scene {
+        background: #ffffff;
+        color: #000;
+      }
+
+      #info {
+        position: absolute;
+        top: 0px;
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        text-align: center;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        pointer-events: none;
+        z-index: 1;
+        line-height: 30px;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="info">
+      <span class="blink" id="animate">animate</span>
+      <span class="blink" id="pointerover">pointerover</span>
+      <span class="blink" id="pointerout">pointerout</span>
+      <span class="blink" id="pointerenter">pointerenter</span>
+      <span class="blink" id="pointerleave">pointerleave</span>
+      <span class="blink" id="pointermove">pointermove</span>
+      <span class="blink" id="pointerdown">pointerdown</span>
+      <span class="blink" id="pointerup">pointerup</span>
+      <span class="blink" id="pointerintersection">pointerintersection</span>
+      <span class="blink" id="click">click</span>
+      <span class="blink" id="dblclick">dblclick</span>
+      <span class="blink" id="wheel">wheel</span>
+      <span class="blink" id="focus">focus</span>
+      <span class="blink" id="blur">blur</span>
+      <span class="blink" id="focusin">focusin</span>
+      <span class="blink" id="focusout">focusout</span>
+      <span class="blink" id="keydown">keydown</span>
+      <span class="blink" id="keyup">keyup</span>
+      <span class="blink" id="drag">drag</span>
+      <span class="blink" id="dragstart">dragstart</span>
+      <span class="blink" id="dragend">dragend</span>
+      <span class="blink" id="drop">drop</span>
+      <span class="blink" id="dragenter">dragenter</span>
+      <span class="blink" id="dragleave">dragleave</span>
+      <span class="blink" id="dragover">dragover</span>
+      <span class="blink" id="dragcancel">dragcancel</span>
+      <span class="blink" id="positionchange">positionchange</span>
+      <span class="blink" id="scalechange">scalechange</span>
+      <span class="blink" id="rotationchange">rotationchange</span>
+      <span class="blink" id="viewportresize">viewportresize</span>
+    </div>
+    <script type="module" src="main.ts"></script>
+  </body>
 </html>
