Refactoring and improvements

--- a/packages/InstancedMesh2/examples/index.html
+++ b/packages/InstancedMesh2/examples/index.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <script type="module" src="./main.ts"></script>
+  <script type="module" src="./example.ts"></script>
   <span class="info" id="count"></span>
 </body>
 </html>
