Refactor instanced mesh structure and update example integration

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 </head>
 
 <body>
-    <script type="module" src="example.ts"></script>
+    <canvas></canvas>
+    <script type="module" src="examples/example.ts"></script>
 </body>
 
 </html>
